src/objects/inscor__Cycle_Count__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Cycle Counts</relationshipLabel>
        <relationshipName>Cycle_Counts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Responsibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsibility</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cycle_Counts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Planning</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cycle Count</label>
    <listViews>
        <fullName>inscor__All_Cycle_Counts</fullName>
        <columns>NAME</columns>
        <columns>inscor__Planned_Start_Date__c</columns>
        <columns>inscor__Responsibility__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cycle Counts</label>
    </listViews>
    <nameField>
        <label>Cycle Count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>